tests/snapshots/rust-1.49.0/acceptance__features_produce_human_readable_errors.snap
---
source: tests/acceptance_tests.rs
assertion_line: 141
expression: output
---
  |
  |                                    ^^^^^
 --> src/lib.rs:5:36
5 | #[test_case(2 => is matching_regex "abc")]
To learn more, run the command again with --verbose.
error: 'with-regex' feature is required to use 'matches-regex' keyword
error: aborting due to previous error
error: could not compile `features_produce_human_readable_errors`
